# bizman

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  modal_app.py  pyproject.toml
backend/: __init__.py  main.py
backend/agents/: __init__.py  executor.py  planner.py  team.py  validator.py
backend/api/: auth.py  chat.py  dashboard.py  leads.py  rag.py  webhooks.py  workflows.py
backend/core/: config.py  embedder.py  errors.py  gemini.py  logging.py  supabase.py  tracing.py
backend/memory/: long_term.py  short_term.py
backend/models/: schemas.py
backend/rag/: cache.py  ingestion.py  pipeline.py
backend/workflows/: _log_helper.py  crm_export.py  email_summary.py  lead_notify.py
frontend/: next.config.ts  out.css  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/chat/: page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/leads/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/tracing/: page.tsx
frontend/src/app/(dashboard)/workflows/: page.tsx
frontend/src/app/(dashboard)/workflows/builder/: page.tsx
frontend/src/app/api/proxy/[...path]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: ChatBubble.tsx  LeadBadge.tsx  Sidebar.tsx  StatsCard.tsx  TopNavBar.tsx
frontend/src/lib/: api.ts  auth.ts
