[project]
name = "bizmind-backend"
version = "0.1.0"
description = "BizMind AI — AI Business Assistant Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    "supabase>=2.5.0",
    "agno[google]>=1.3.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "modal>=1.4.2",
]


[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
